[metadata]
name = lemmy_nhl
version = 2.0.0

[options]
install_requires = 
	plemmy
	requests
zip_safe = True
package_dir=
	=src

[options.entry_points]
console_scripts = 
	lemmy_nhl_config = lemmy_nhl.config:config
	lemmy_nhl_draft = lemmy_nhl.draft_bot:draft
	lemmy_nhl_daemon = lemmy_nhl.lemmy_nhl_bot_daemon:daemon

