[metadata]
name = lemmy_nhl
version = 1.5.0
author = socphoenix
url = https://github.com/socphoenix/lemmy_nhl_bot
description = bot to add live scores to lemmy community for hockey games
long_description = file: README.md
long_description_content_type = text/markdown
keywords = lemmy, hockey, bot
license = Apache 2.0

[options]
install_requires = 
	plemmy
	requests
package_dir=
	=src

lemmy_nhl = *.txt
* = README.md
* = lnhl.db

[options.entry_points]
console_scripts = 
	lemmy_nhl_config = lemmy_nhl.config:config
	lemmy_nhl_draft = lemmy_nhl.draft_bot:draft
	lemmy_nhl_daemon = lemmy_nhl.lemmy_nhl_bot_daemon:daemon

